made county centroids for biomass inventory instead of poly

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+affine==2.2.2
 alabaster==0.7.10
 anaconda-client==1.6.3
 anaconda-navigator==1.6.2
@@ -73,6 +74,7 @@ MarkupSafe==0.23
 matplotlib==2.0.2
 missingno==0.4.1
 mistune==0.7.4
+mpldatacursor==0.6.2
 mpmath==0.19
 msgpack-python==0.4.8
 multipledispatch==0.4.9
@@ -102,8 +104,10 @@ pep8==1.7.0
 pexpect==4.2.1
 pickleshare==0.7.4
 Pillow==4.1.1
+-e git+https://github.com/Project-Platypus/Platypus.git@a45db6ebd2aff8056c7d20b7b9cfdd64a2fa1fd9#egg=Platypus_Opt
 plotly==3.1.0
 ply==3.10
+-e git+https://github.com/Project-Platypus/PRIM.git@18dd130814160fceddfb1fd2720e288f4ab6a641#egg=PRIM
 prompt-toolkit==1.0.14
 psutil==5.2.2
 ptyprocess==0.5.1
@@ -120,6 +124,7 @@ pyOpenSSL==17.0.0
 pyparsing==2.1.4
 pyproj==1.9.6
 pysal==2.0.0
+pyshp==1.2.10
 pytest==3.0.7
 python-dateutil==2.6.0
 pytz==2017.2
@@ -129,8 +134,11 @@ pyzmq==16.0.2
 QtAwesome==0.4.4
 qtconsole==4.3.0
 QtPy==1.2.1
+rasterio==1.0.22
 requests==2.14.2
 retrying==1.3.3
+# Editable install with no version control (Rhodium==0.1)
+-e /Users/anayahall/anaconda/lib/python3.6/site-packages
 rope-py3k==0.9.4.post1
 Rtree==0.8.3
 scikit-image==0.13.0
@@ -142,6 +150,7 @@ simplegeneric==0.8.1
 singledispatch==3.4.0.3
 six==1.10.0
 snowballstemmer==1.2.1
+snuggs==1.4.3
 sortedcollections==0.5.3
 sortedcontainers==1.5.7
 Sphinx==1.5.6
