--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ colorama==0.3.9
 conda==4.3.21
 contextlib2==0.5.5
 cryptography==1.8.1
+cvxpy==1.0.21
 cycler==0.10.0
 Cython==0.25.2
 cytoolz==0.8.2
@@ -36,14 +37,17 @@ dask==0.14.3
 datashape==0.5.4
 decorator==4.0.11
 descartes==1.1.0
+dill==0.2.9
 distributed==1.16.3
 docutils==0.13.1
+ecos==2.0.7.post1
 entrypoints==0.2.2
 et-xmlfile==1.0.1
 fastcache==1.0.2
 Fiona==1.8.4
 Flask==0.10.1
 Flask-Cors==3.0.2
+future==0.17.1
 geopandas==0.4.0
 gevent==1.2.1
 greenlet==0.4.12
@@ -78,6 +82,7 @@ mpldatacursor==0.6.2
 mpmath==0.19
 msgpack-python==0.4.8
 multipledispatch==0.4.9
+multiprocess==0.70.7
 munch==2.3.2
 navigator-updater==0.1.0
 nbconvert==5.1.1
@@ -88,11 +93,12 @@ nose==1.3.7
 notebook==5.0.0
 numba==0.33.0
 numexpr==2.6.2
-numpy==1.12.1
+numpy==1.16.2
 numpydoc==0.6.0
 odo==0.5.0
 olefile==0.44
 openpyxl==2.4.7
+osqp==0.5.0
 packaging==16.8
 palettable==3.1.1
 pandas==0.20.1
@@ -143,7 +149,8 @@ rope-py3k==0.9.4.post1
 Rtree==0.8.3
 scikit-image==0.13.0
 scikit-learn==0.18.1
-scipy==0.19.0
+scipy==1.2.1
+scs==2.1.0
 seaborn==0.7.1
 Shapely==1.6.4.post2
 simplegeneric==0.8.1
